moved SimpleArrayList to api package